# QT_tic_tac_toe_game

./: .clang-format  CMakeLists.txt  README.md  apply_clang.bat  gameboard.cpp  gameboard.h  main.cpp  main.qml
qml/: main.qml
